--- a/src/components/Student/Profile/ProfileContact/ProfileContact.css
+++ b/src/components/Student/Profile/ProfileContact/ProfileContact.css
@@ -20,7 +20,7 @@
 
 .contactTitle{
     position: static;
-    width: 577.5px;
+    width: 500px;
     height: 30px;
     font-family: Montserrat;
     font-style: normal;
